force-app/main/default/objects/Contact/fields/DataDaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>DataDaAprovacao__c</fullName>
    <label>Data da Avaliação do Treinamento</label>
    <type>DateTime</type>
</CustomField>