force-app/main/default/objects/Contact/fields/EncaminharAprovTreinamento__c.field-meta.xml
<CustomField>
    <fullName>EncaminharAprovTreinamento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox paraacionar o processo de aprovação</description>
    <inlineHelpText>Marque está opção para iniciar o processo de aprovação para treinamento</inlineHelpText>
    <label>Encaminhar para Aprov. Treinamento</label>
    <type>Checkbox</type>
</CustomField>