force-app/main/default/objects/Contact/fields/FeedbackTreinamento__c.field-meta.xml
<CustomField>
    <fullName>FeedbackTreinamento__c</fullName>
    <description>Campo para armazenar todas as informações relevantes do treinamento do possível herói</description>
    <inlineHelpText>Informações relevantes do treinamento</inlineHelpText>
    <label>Feedback Treinamento</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>