force-app/main/default/objects/Contact/fields/isTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>isTerraqueo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar sempre que o possível herói for da Terra</description>
    <inlineHelpText>Marcar sempre que o possível herói for da Terra</inlineHelpText>
    <label>É Terráqueo?</label>
    <type>Checkbox</type>
</CustomField>