force-app/main/default/objects/Contact/fields/NivelDoHeroi__c.field-meta.xml
<CustomField>
    <fullName>NivelDoHeroi__c</fullName>
    <description>Nível de Senioridade do Herói</description>
    <inlineHelpText>Nível de Senioridade do Herói</inlineHelpText>
    <label>Nível do Herói</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspira</fullName>
            </value>
            <value>
                <fullName>Júnior</fullName>
            </value>
            <value>
                <fullName>Pleno</fullName>
            </value>
            <value>
                <fullName>Sênior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>