force-app/main/default/objects/Contact/fields/NomeDeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeDeGuerra__c</fullName>
    <description>Nome de Guerra do Vilão e Herói.</description>
    <externalId>true</externalId>
    <inlineHelpText>Nome de Guerra do Vilão e Herói.</inlineHelpText>
    <label>Nome de Guerra</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>