force-app/main/default/objects/Contact/fields/ResponsavelPelaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelPelaAprovacao__c</fullName>
    <label>Responsável pela Aprovação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>