force-app/main/default/objects/Contact/fields/StatusCandidato__c.field-meta.xml
<CustomField>
    <fullName>StatusCandidato__c</fullName>
    <description>Mostra o Status do Candidato</description>
    <inlineHelpText>Mostra o Status do Candidato</inlineHelpText>
    <label>Status Candidato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Análise</fullName>
                <default>true</default>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>Reprovado na Análise</fullName>
            </value>
            <value>
                <fullName>Aguardando Aprovação p/ Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado na Análise do Gestor</fullName>
            </value>
            <value>
                <fullName>Em Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado no Treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado no Treinamento</fullName>
            </value>
            <value>
                <fullName>AprovadoDireto</fullName>
                <label>Aprovado Direto</label>
            </value>
            <value>
                <fullName>Aprovado Direto</fullName>
                <isActive>false</isActive>
                <label>Aprovado Direto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>