force-app/main/default/objects/Contact/recordTypes/Vilao.recordType-meta.xml
<RecordType>
    <fullName>Vilao</fullName>
    <active>true</active>
    <label>Vilão</label>
</RecordType>